# todolistDesktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: prd.md  tasks.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src/components/: ClearCompletedButton.tsx  ColorLabel.tsx  DueDatePicker.tsx  OpacitySlider.tsx  SettingsPanel.tsx  TitleBar.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx
src/hooks/: useReminder.ts
src/lib/: tauri.ts  utils.ts
src/stores/: settingsStore.ts  todoStore.ts
src/types/: index.ts
