[package]
name = "todolist-desktop-pin"
version = "0.1.0"
description = "A todo list desktop pin application"
authors = []
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "todolist_desktop_pin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one at a time so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Automatically strip symbols from the binary
